@@ -1,5 +1,6 @@
 plugins {
-  id "java"
+  id "application"
+  id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
 repositories {
@@ -8,20 +9,37 @@ repositories {
 
 java { sourceCompatibility = JavaVersion.VERSION_17 }
 
+application {
+  applicationDefaultJvmArgs = [
+  "-Djava.security.manager=allow",
+  "-XX:+IgnoreUnrecognizedVMOptions",
+  "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED",
+  "--add-opens=java.desktop/sun.awt=ALL-UNNAMED"]
+}
+
+javafx {
+    version = "17.0.6"
+    modules = [ 'javafx.controls', 'javafx.swing' ]
+}
+
+mainClassName = 'smi.roborun.HelloFx'
+
 dependencies {
-  implementation files(System.getenv("ROBOCODE_HOME") + "\\libs\\robocode.jar")
-  implementation files(System.getenv("ROBOCODE_HOME") + "\\libs\\annotations-13.0.jar")
-  implementation files(System.getenv("ROBOCODE_HOME") + "\\libs\\commons-lang3-3.12.0.jar")
-  implementation files(System.getenv("ROBOCODE_HOME") + "\\libs\\org.osgi.service.prefs-1.1.2.jar")
-  implementation files(System.getenv("ROBOCODE_HOME") + "\\libs\\robocode.battle-1.9.5.0.jar")
-  implementation files(System.getenv("ROBOCODE_HOME") + "\\libs\\bcel-6.6.1.jar")
-  implementation files(System.getenv("ROBOCODE_HOME") + "\\libs\\kotlin-stdlib-1.7.22.jar")
-  implementation files(System.getenv("ROBOCODE_HOME") + "\\libs\\osgi.annotation-8.0.1.jar")
-  implementation files(System.getenv("ROBOCODE_HOME") + "\\libs\\robocode.core-1.9.5.0.jar")
-  implementation files(System.getenv("ROBOCODE_HOME") + "\\libs\\robocode.repository-1.9.5.0.jar")
-  implementation files(System.getenv("ROBOCODE_HOME") + "\\libs\\codesize-1.2.jar")
-  implementation files(System.getenv("ROBOCODE_HOME") + "\\libs\\kotlin-stdlib-common-1.7.22.jar")
-  implementation files(System.getenv("ROBOCODE_HOME") + "\\libs\\picocontainer-2.15.jar")
+  implementation files(System.getenv("ROBOCODE_HOME") + "/libs/robocode.jar")
+  implementation files(System.getenv("ROBOCODE_HOME") + "/libs/annotations-13.0.jar")
+  implementation files(System.getenv("ROBOCODE_HOME") + "/libs/commons-lang3-3.12.0.jar")
+  implementation files(System.getenv("ROBOCODE_HOME") + "/libs/org.osgi.service.prefs-1.1.2.jar")
+  implementation files(System.getenv("ROBOCODE_HOME") + "/libs/robocode.battle-1.9.5.0.jar")
+  implementation files(System.getenv("ROBOCODE_HOME") + "/libs/bcel-6.6.1.jar")
+  implementation files(System.getenv("ROBOCODE_HOME") + "/libs/kotlin-stdlib-1.7.22.jar")
+  implementation files(System.getenv("ROBOCODE_HOME") + "/libs/osgi.annotation-8.0.1.jar")
+  implementation files(System.getenv("ROBOCODE_HOME") + "/libs/robocode.core-1.9.5.0.jar")
+  implementation files(System.getenv("ROBOCODE_HOME") + "/libs/robocode.repository-1.9.5.0.jar")
+  implementation files(System.getenv("ROBOCODE_HOME") + "/libs/codesize-1.2.jar")
+  implementation files(System.getenv("ROBOCODE_HOME") + "/libs/kotlin-stdlib-common-1.7.22.jar")
+  implementation files(System.getenv("ROBOCODE_HOME") + "/libs/picocontainer-2.15.jar")
 
   implementation "org.apache.xmlgraphics:batik-transcoder:1.+"
 }
